* added a setting to hide directories from file selector menus, useful when you don't want the user to be able to navigate the filesystem
* Smartload: now the cursor remembers last file loaded
* added two more GUI styles: Clean and CleanInverse

Improved sprite viewer: 
* now can see sprites with speccy screen format
* you can view sprites up to 512x192 
* you can see tsconf sprites

Improved TBBlue emulation: 
* Added clip window registers
* Added Copper
* Added almost all next extended opcodes
* Added a setting to start TBBlue directly to a 48 rom but with all the Next features enabled, useful for fast snapshot loading

Improved AY Player: now shows waveform volume meter
Improved VU meters with decay effect on AY Player, AY Registers and Waveform
Improved text mode drivers (aalib, stdout, simpletext, curses): text settings are in different submenu, setting to set stdout/simpletext fps
Improved messages windows. You can now have an internal clipboard, press key c to copy to it. Press P on file utils to paste contents to a file
Improved frameskip: better performance, because realvideo buffer is not updated when frameskip
Improved sound: Silence detector activated by default but can be disabled
Improved top speed: loading sound is distorted when setting top speed
Improved autoload: new setting to run at top speed the reset+load"" process
Improved real tape loading: now it shows a percentage of tape loaded
Improved default configuration: when the configuration file doesn't exist, the new one has the autosave configuration setting enabled
Improved configuration parsing: if unknown setting found on configuration file, ZEsarUX will open but warns about the error, and the autosave feature is not enabled
Improved rendering on text mode drivers: now realvideo mode can render directly to black&white text. Try TSConf with --vo stdout --realvideo --autoredrawstdout
Improved Linux library dependencies: libssl is not enabled by default on compilation

Fixed ZX-Uno emulation: 